--- a/HMJulia/Versions.toml
+++ b/HMJulia/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "b394785e8f5ca5ff7bcd7a9fc07b503b3186a3fe"
+
+["0.1.1"]
+git-tree-sha1 = "274190e1202ca460b4e8ae59624879e361c32520"
