--- a/HMJulia/Versions.toml
+++ b/HMJulia/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "b394785e8f5ca5ff7bcd7a9fc07b503b3186a3fe"
 
 ["0.1.1"]
 git-tree-sha1 = "274190e1202ca460b4e8ae59624879e361c32520"
+
+["0.1.2"]
+git-tree-sha1 = "17c659dd62f88f5f7ec588025a4361ef333aae28"
