--- a/HMJulia/Versions.toml
+++ b/HMJulia/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "274190e1202ca460b4e8ae59624879e361c32520"
 
 ["0.1.2"]
 git-tree-sha1 = "17c659dd62f88f5f7ec588025a4361ef333aae28"
+
+["0.1.3"]
+git-tree-sha1 = "cccb130babc96d53baa1272dae8785010aed8d55"
