--- a/HMJulia/Versions.toml
+++ b/HMJulia/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "a4897b5f30c16369f64a6d2fb95bc5475e3f1625"
 
 ["0.1.3"]
 git-tree-sha1 = "758880052918cbd77388ad3552f6659fd80f167f"
+
+["0.1.4"]
+git-tree-sha1 = "515c42ca7851a4c05ff6e21a4c693ca279f5cb47"
