--- a/HMJulia/Package.toml
+++ b/HMJulia/Package.toml
@@ -1,3 +1,3 @@
 name = "HMJulia"
 uuid = "42c1917d-db74-44cc-b9d6-34b93e5a02af"
-repo = "https://github.com/henryk-modzelewski/HMJulia.jl.git"
+repo = "https://GitHub.com/henryk-modzelewski/HMJulia.jl.git"
