--- a/HMJulia/Versions.toml
+++ b/HMJulia/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "758880052918cbd77388ad3552f6659fd80f167f"
 
 ["0.1.4"]
 git-tree-sha1 = "7b914a8dacb71b5a9fb50bca2311534c541e8df7"
+
+["0.1.5"]
+git-tree-sha1 = "aa8ffd3e6428d4b46f84adfccf730aecab35d377"
